# backend/routes/api-admin.php
@@ -10,5 +10,6 @@ Route::middleware('auth:api')->group(function() {
     Route::delete('/selection-post/{selectionPostId}', 'Api\Admin\SelectionPost\DeleteSelectionPostController')->name('admin.selectionPost.delete');
 
     Route::get('/shop', 'Api\Admin\Shop\IndexShopController')->name('admin.shop.index');
+    Route::post('/shop', 'Api\Admin\Shop\RegisterShopController')->name('admin.shop.register');
     Route::get('/shop/{shopId}', 'Api\Admin\Shop\GetShopController')->name('admin.shop.show');
 });
